[#39969089] Fix data sources icon alignment

--- a/app/assets/stylesheets/instances/_instance_new_dialog.scss
+++ b/app/assets/stylesheets/instances/_instance_new_dialog.scss
@@ -132,3 +132,9 @@
     background: transparent url("/images/instances/icon_datasourcemenu_gnip.png") center center no-repeat;
   }
 }
+
+.ui-selectmenu-button #data_sources-button .ui-selectmenu-text {
+  span {
+    margin-top: -5px;
+  }
+}
